--- a/frontend/src/Components/Contact/contact.module.scss
+++ b/frontend/src/Components/Contact/contact.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 2rem;
 
   .imgDiv {
     height: 40vh;
@@ -54,7 +55,7 @@
         border-radius: 5px;
         margin: 8px;
         color: #6a2e4d;
-        font-size: .9rem;
+        font-size: 0.9rem;
       }
     }
   }
