--- a/frontend/src/Components/Profile/profile.module.scss
+++ b/frontend/src/Components/Profile/profile.module.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 2rem;
+  font-family: "Roboto";
   .imgDiv {
     height: 40vh;
     width: 100%;
@@ -35,16 +36,46 @@
     justify-content: center;
     align-items: center;
     .profile_subdiv {
-      width: 80%;
+      width: 90%;
       display: flex;
       justify-content: center;
+      gap: 100px;
 
       .profile_right {
         display: flex;
         flex-direction: column;
-        .input_field{
-            display: flex;
-            flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        .profile_data {
+          display: flex;
+          align-items: center;
+          h3 {
+            font-size: 1.2rem;
+          }
+          p {
+            margin-left: 10px;
+          }
+          // flex-direction: column;
+        }
+        .edit_btn {
+          font-size: 1.1rem;
+          padding: 8px 18px;
+          border: none;
+          color: #000;
+          background-color: #ffa903;
+          border-radius: 5px;
+          cursor: pointer;
+          font-family: "Roboto";
+        }
+      }
+      .profile_left {
+        display: flex;
+        flex-direction: column;
+        .profile_img {
+          height: 250px;
+          width: 250px;
+          border-radius: 20px;
+          margin-top: 1.2rem;
         }
       }
     }
