--- a/frontend/src/Components/Trasnsactions/transactions.module.scss
+++ b/frontend/src/Components/Trasnsactions/transactions.module.scss
@@ -1,4 +1,4 @@
-.booking_main {
+.transat_main {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -52,6 +52,12 @@
       font-family: "Roboto";
       color: #622243;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      .allticket_subele_user{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        margin-top: 10px;
+      }
       .allticket_subele {
         width: 100%;
         display: flex;
