--- a/frontend/src/Components/Home/Hero/hero.module.scss
+++ b/frontend/src/Components/Home/Hero/hero.module.scss
@@ -105,8 +105,11 @@
         background-color: transparent;
         border-right: 0.5px solid gray;
         height: 8vh;
-        padding: .2rem 1rem;
+        padding: 0.2rem 1rem;
       }
+    }
+    .form_div {
+      background-color: #F8F3E7;
     }
   }
 }
