--- a/frontend/src/Components/Home/Cards/card.module.scss
+++ b/frontend/src/Components/Home/Cards/card.module.scss
@@ -1,8 +1,115 @@
-.main_cards{
-    width: 100%;
-    height: 100vh;
+.main_cards {
+  width: 100%;
+  //   height: 100vh;
+  display: flex;
+  justify-content: center;
+  .card_container {
+    width: 70%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    margin-top: 10rem;
+    h1 {
+      color: #21283f;
+      font-family: "Roboto";
+    }
+    .btn_container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 3rem;
+      .active_btn {
+        background-color: #ffa903;
+        border: none;
+        padding: 17px 28px 17px 28px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 3px;
+        cursor: pointer;
+        box-shadow: 0px 1px 5px 0px rgb(139 139 139 / 14%);
+        transition: 0.3s ease-in-out;
+      }
+      .btn {
+        background-color: #ffffff;
+        border: none;
+        padding: 17px 28px 17px 28px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 3px;
+        cursor: pointer;
+        box-shadow: 0px 1px 5px 0px rgb(139 139 139 / 14%);
+        span {
+          margin-right: 0.3rem;
+          font-size: 14px;
+          color: #2a2a2a;
+          font-family: "Roboto";
+        }
+        .icon {
+          font-size: 1.1rem;
+          color: #2a2a2a;
+        }
+      }
+    }
+  }
+  .cards {
+    width: 80%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
+    margin-top: 1.2rem;
+    padding: 2rem 0rem;
+    .card {
+      background-color: #ffffff;
+      //   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      box-shadow: 0px 1px 16px 0px rgb(139 139 139 / 16%);
+      padding: 0.5rem 0.6rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border-radius: 7px;
+      .location {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-family: "Roboto";
+        font-size: 15px;
+        font-weight: 600;
+        color: #622243;
+        border-bottom: 0.1px solid rgba(0, 0, 0, 0.2);
+        .icon{
+            font-size: 1.3rem;
+        }
+      }
+      .bs_date {
+        color: #622243;
+        font-size: 13px;
+        font-family: "Roboto";
+      }
+      .price {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        padding: .5rem .3rem;
+        span {
+          color: #622243;
+          font-size: 14px;
+        }
+      }
+      img {
+        width: 100%;
+        height: 15vh;
+        object-fit: cover;
+        border-top-left-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+        &:hover {
+          transform: scale(1.04);
+          transition: .3s ease-in-out;
+        }
+      }
+    }
+  }
 }
