--- a/frontend/src/Components/Trasnsactions/transactions.module.scss
+++ b/frontend/src/Components/Trasnsactions/transactions.module.scss
@@ -63,7 +63,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-top: .8rem;
+        margin-top: 1rem;
         span {
           font-size: 1.1rem;
         }
